# cpp-reflection

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-13.yaml  clang-14.yaml  gcc-11.yaml  gcc-12.yaml  generic.yaml
src/: CMakeLists.txt
src/reflection/: member_object_references.hpp  member_objects.hpp  names.hpp  structured_binding_member_reference.hpp
src/reflection/detail/: struct_to_reference_tuple.hpp
src/reflection/manual/: member_object_reference.hpp
src/reflection/structured_binding/: bind.hpp  member_object_reference.hpp  member_reference.hpp  reference_tuple.hpp
tools/: CMakeLists.txt  create_structured_bindings.cpp
unit_test/: CMakeLists.txt  member_objects.cpp  mock.hpp  names.cpp
unit_test/member_objects/: auto_structured_binding.cpp  manual_with_name.cpp  manual_without_name.cpp
